--- a/additionalhtml/newhtml.html
+++ b/additionalhtml/newhtml.html
@@ -3,16 +3,36 @@
         <div class="game-table" id ="answers">
             <div class="game-table__head">
                 <div class="game-table__row">
-                    <div class="game-table__cell">Player Name</div>
-                    <div class="game-table__cell">Ranking</div>
-                    <div class="game-table__cell">Expected Results</div>
+                    <div class="game-table__cell h">Player Name</div>
+                    <div class="game-table__cell h">Ranking</div>
+                    <div class="game-table__cell h">Expected Results</div>
                 </div>
             </div> 
             <div class="game-table__body">
                 <div class="game-table__row">
                     <div class="game-table__cell center">Stephen Curry</div>
-                    <div class="game-table__cell">1</div>
-                    <div class="game-table__cell">234.234</div>
+                    <div class="game-table__cell center">1</div>
+                    <div class="game-table__cell center">234</div>
+                </div>
+                <div class="game-table__row">
+                    <div class="game-table__cell center">Stephen Curry</div>
+                    <div class="game-table__cell center">1</div>
+                    <div class="game-table__cell center">234</div>
+                </div>
+                <div class="game-table__row">
+                    <div class="game-table__cell center">Stephen Curry</div>
+                    <div class="game-table__cell center">1</div>
+                    <div class="game-table__cell center">234</div>
+                </div>
+                <div class="game-table__row">
+                    <div class="game-table__cell center">Stephen Curry</div>
+                    <div class="game-table__cell center">1</div>
+                    <div class="game-table__cell center">234</div>
+                </div>
+                <div class="game-table__row">
+                    <div class="game-table__cell center">Stephen Curry</div>
+                    <div class="game-table__cell center">1</div>
+                    <div class="game-table__cell center">234</div>
                 </div>
             </div> 
         </div>
