--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" href="./popup.css"> 
 </head>
 <body>
-    <h1>DeMar DeRozan, a popular basketball player, once <a href = "https://www.youtube.com/watch?v=OPqFkjBUBXQ" target = "_blank">dunked on</a>, or "destroyed" Jakob Poeltl, hence the name of this Chrome extension, "DeRozan".</h1>
+    <h1>DeMar DeRozan, a popular basketball player, once <a href = "https://www.youtube.com/watch?v=OPqFkjBUBXQ" target = "_blank">dunked on</a>, or "destroyed" Jakob Poeltl, hence the name of this extension, "DeRozan".</h1>
 </body>
 </html>
